--- a/index.html
+++ b/index.html
@@ -419,14 +419,14 @@ https://templatemo.com/tm-578-first-portfolio
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <a class="bi-bell projects-image img-fluid" href="">
-                                    </a>
+                                    <!-- <a class="bi-bell projects-image img-fluid" href="">
+                                    </a> -->
                                     
-                                    <h3 class="projects-title">Zoik agency</h3>
-                                    <small class="projects-tag">Branding</small>
+                                    <small class="projects-tag">President</small>
+                                    <h3 class="projects-title">Narendra Modi</h3>
                                 </div>
-                                <a href="images/projects/nikhil-KO4io-eCAXA-unsplash.jpg" class="popup-image">
-                                    <img src="images/projects/nikhil-KO4io-eCAXA-unsplash.jpg" class="projects-image img-fluid" alt="">
+                                <a href="images/OIP.jpeg" class="popup-image">
+                                    <img src="images/OIP.jpeg" class="projects-image img-fluid" alt="">
                                 </a>
                                 
                             </div>
@@ -435,13 +435,13 @@ https://templatemo.com/tm-578-first-portfolio
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Photography</small>
+                                    <small class="projects-tag">President</small>
 
-                                    <h3 class="projects-title">The Watch</h3>
+                                    <h3 class="projects-title">Narendra Modi</h3>
                                 </div>
 
-                                <a href="images/projects/the-5th-IQYR7N67dhM-unsplash.jpg" class="popup-image">
-                                    <img src="images/projects/the-5th-IQYR7N67dhM-unsplash.jpg" class="projects-image img-fluid" alt="">
+                                <a href="images/OIP.jpeg" class="popup-image">
+                                    <img src="images/OIP.jpeg" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
@@ -449,13 +449,13 @@ https://templatemo.com/tm-578-first-portfolio
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Website</small>
+                                    <small class="projects-tag">President</small>
 
-                                    <h3 class="projects-title">Polo</h3>
+                                    <h3 class="projects-title">Narendra Modi</h3>
                                 </div>
 
-                                <a href="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="popup-image">
-                                    <img src="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="projects-image img-fluid" alt="">
+                                <a href="images/OIP.jpeg" class="popup-image">
+                                    <img src="images/OIP.jpeg" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
