--- a/index.html
+++ b/index.html
@@ -882,6 +882,10 @@
 
 
 
+            
+
+
+
 
             <section class="projects" id="section_4">
                 <div class="container">
@@ -952,6 +956,86 @@
                 </div>
             </section>
  
+
+            <section class="featured section-padding">
+                <div class="container">
+                    <div class="row">
+
+                        <div class="col-lg-6 col-12">
+                            <div class="profile-thumb">
+                                <div class="profile-title">
+                                    <h4 class="mb-0">Company Presence</h4>
+                                </div>
+
+                                <div class="profile-body">
+                                    <p>
+                                        <img src="images/a.png" style="height:85px;"> 
+                                        <span class="profile-small-title" style="color: orange;">State of Bihar</span>
+                                        <!-- <span>Joshua Morgan</span> -->
+                                    </p>
+                                    <p>
+                                        <img src="images/b.png" style="height:85px;"> 
+                                        <span class="profile-small-title" style="color: orange;">Uttar Pradesh</span>
+                                        <!-- <span>Joshua Morgan</span> -->
+                                    </p>
+                                    <p>
+                                        <img src="images/c.png" style="height:85px;"> 
+                                        <span class="profile-small-title" style="color: orange;">Delhi</span>
+                                        <!-- <span>Joshua Morgan</span> -->
+                                    </p>
+                                    <p>
+                                        <img src="images/d.png" style="height:85px;"> 
+                                        <span class="profile-small-title" style="color: orange;">Punjab</span>
+                                        <!-- <span>Joshua Morgan</span> -->
+                                    </p>
+                                    <p>
+                                        <img src="images/e.png" style="height:85px;"> 
+                                        <span class="profile-small-title" style="color: orange;">Assam</span>
+                                        <!-- <span>Joshua Morgan</span> -->
+                                    </p>
+
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-6 col-12 mt-5 mt-lg-0">
+                            <div class="col-lg-6 col-12">
+                                <img src="images/map.png" style="height: 500px; width: 600px; border-radius:30px ;">
+                            </div>
+                            <!-- <div class="about-thumb">
+                                <div class="row">
+                                    <div class="col-lg-6 col-6 featured-border-bottom py-2">
+                                        <strong class="featured-numbers">20+</strong>
+
+                                        <p class="featured-text">Years of Experiences</p>
+                                    </div>
+
+                                    <div class="col-lg-6 col-6 featured-border-start featured-border-bottom ps-5 py-2">
+                                        <strong class="featured-numbers">245</strong>
+
+                                        <p class="featured-text">Happy Customers</p>
+                                    </div>
+
+                                    <div class="col-lg-6 col-6 pt-4">
+                                        <strong class="featured-numbers">640</strong>
+
+                                        <p class="featured-text">Project Finished</p>
+                                    </div>
+
+                                    <div class="col-lg-6 col-6 featured-border-start ps-5 pt-4">
+                                        <strong class="featured-numbers">72+</strong>
+
+                                        <p class="featured-text">Digital Awards</p>
+                                    </div>
+                                </div>
+                            </div> -->
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+
 
 
             <footer class="footer-section">
